Seed bootstrap admin in migration and force member-by-default registration

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,11 @@ AI_MODEL=gpt-4o-mini
 APP_ENV=development
 CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000,http://localhost:8501,http://127.0.0.1:8501
 DEFAULT_WORKSPACE_NAME=OpsPilot Team
+BOOTSTRAP_ADMIN_EMAIL=admin@opspilot.local
+BOOTSTRAP_ADMIN_NAME=OpsPilot Admin
+BOOTSTRAP_ADMIN_PASSWORD=Admin@123456
+# Optional: provide hash directly instead of BOOTSTRAP_ADMIN_PASSWORD
+BOOTSTRAP_ADMIN_PASSWORD_HASH=
 VAULT_ENABLED=false
 VAULT_PATH=.vault/secrets.enc
 VAULT_MASTER_KEY=
