Add vendor support for inventory + AI flows

--- a/.env.example
+++ b/.env.example
@@ -12,9 +12,9 @@ AI_MODEL=gpt-4o-mini
 APP_ENV=development
 CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000,http://localhost:8501,http://127.0.0.1:8501
 DEFAULT_WORKSPACE_NAME=OpsPilot Team
-BOOTSTRAP_ADMIN_EMAIL=admin@opspilot.local
-BOOTSTRAP_ADMIN_NAME=OpsPilot Admin
-BOOTSTRAP_ADMIN_PASSWORD=Admin@123456
+BOOTSTRAP_ADMIN_EMAIL=admin@aspire.com
+BOOTSTRAP_ADMIN_NAME=Aspire Admin
+BOOTSTRAP_ADMIN_PASSWORD=AspirePilot
 # Optional: provide hash directly instead of BOOTSTRAP_ADMIN_PASSWORD
 BOOTSTRAP_ADMIN_PASSWORD_HASH=
 VAULT_ENABLED=false
